Fixing CSS overflow issues

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 #parentBlock {
     position: absolute;
     right: 0;
-    bottom: 0;
+    bottom: 1px;
     border-style: solid;
     border-color: #FFFFFF;
     border-width: 1px;
@@ -20,21 +20,23 @@
 @media only screen and (orientation: portrait) {
     #parentBlock {
         position: absolute;
-        right: 0;
         left: 0;
-        bottom: 0;
+        bottom: 1px;
         border-style: solid;
         border-color: #FFFFFF;
         border-width: 1px;
-        padding: 15px;
+        padding: 10px;
         height: fit-content;
-        width: 100%;
+        width: calc(100vw - 22px);
         flex-direction: row;
         justify-content: space-around;
     }
 }
 
 body {
+    margin: 0px;
+    padding: 0px;
+    width: 100vw;
     overflow: hidden;
     min-height: 100vh;
     min-height: -webkit-fill-available;
